hphp/hack/test/typecheck/reactive/rx_if_implements8.php.exp
File "rx_if_implements8.php", line 8, characters 28-35:
Method is marked with <<__RxIfImplements>>, <<__RxShallowIfImplements>> or <<__RxLocalIfImplements>> attributes that have invalid arguments.These attributes must have one argument and it should be '::class' class constant. (NastCheck[3059])
